web/src/main/webapp/designer/css/designer.css
.z {
  z-index: 1;
}

.row {
  margin-left: 0;
  margin-right: 10px;
}

.col-md-12, .col-md-3 {
  padding-left: 0px;
  padding-right: 0px;
}

body {
  font-size: 13px;
  overflow: hidden;
}

body .container {
  top: 0;
  left: 0;
  height: 100%;
  width: 70%;
  bottom: 15%;
  position: fixed;
  margin-top: 1rem;
  overflow-y: hidden;
  padding-right: 1px;
}

body .panel {
  margin-right: 2px;
  text-align: center;
}

body .panel-body {
  padding: 10px;
}

.target {
  border-right: none;
}

.linefy {
  width: 11% !important;
}

.targettable {
  z-index: 0;
  width: 99.99%;
  margin-top: -18px;
  min-height: 167.5px;
}

.targettable .panel {
  min-height: 160px;
}

.bordered {
  border: none !important;
  background-color: #fff !important;
}

.dotted-border {
  min-height: 44px;
  margin-right: 2px;
  border: 2px dotted;
  border-radius: 5px;
  display: inline-block;
  border-color: #357EBD;
  padding: 10px 5px 5px 5px;
  background-color: #F5F5EF; 
}

.dotted-border-lg {
  margin-top: 0.2rem;
  padding-top: 0.5rem;
  border: 2px dotted #357EBD;
  border-radius: 5px 5px 5px 5px;
}

.data {
  top: 90px;
  right: 12px;
  height: 100%;
  margin-top: 1rem;
  width: 30% !important;
  position: fixed !important;
}
  
.data .panel {
  float: left;
  width: 100%;
  margin-left: 1px;
}

.data .row {
  margin-right: 1px;
  margin-left: -2px;
  margin-bottom: -18px;
}

.data .row .col-md-6 {
  padding-right: 0;
  padding-left: 2px;
}
 
.border-less-panel {
  height: 100%;
  border-radius: 4px 4px 0px 0px;
  border-bottom: none !important;
}

@-moz-document url-prefix() {
  .row {
    margin-right: 1.3rem;
  }
  .data .panel {
    margin-left: -2px;
    margin-bottom: 2px;
  }
}

.trash {
  margin-top: 3rem;
  margin-right: 1rem;
  padding-right: .3rem;
}

.space-right-m {
  margin-right: 1rem;
}

.space-left-m {
  margin-left: 1rem;
}

.space-top-sm {
  padding-top: 1.2rem;
}

.space-top-m {
  margin-top: 1rem;
}

.space-bottom {
  margin-bottom: 1rem;
}

.space-left-neg {
  margin-left: -1.6rem;
}

.nowrap {
  white-space: nowrap;
}

span {
  white-space: nowrap;
  color: #357EBD !important;
}

textarea {
  margin-top: 0.5rem; 
  width: 83% !important;
}

.to {
  margin-top: 15px;
  width: 83% !important;
}

.pont {
  cursor: default !important;
}

.nav-cont {
	padding-left: 8rem;
	padding-right: 8rem;
}

.nav-justified {
  margin-top: 0.5rem !important;
  margin-bottom: 1rem !important;
}

.nav-justified li {
	float: none;
  width: 201px;
	padding-left: .5rem;
	padding-right: .5rem;
}

.nav-justified li > a {
  width:180px;
  height: 49px;
  line-height:30px;
  margin-bottom:0.5rem !important;
  background-color:#428BCA !important;
}

.bootbox {
  left: 0 !important;
  right: 0 !important;
  width: 99% !important;
  display: block !important;
  position: fixed !important;
  margin-left: auto !important;
  margin-right: auto !important;
}

.breadcrumb {
  margin-top: 2rem !important;
}

.table {
  border-top: 0px;
  margin-bottom: 0px;
}

.table th, .table td { 
  border-top: none;
 }

.form-grp {
  margin-bottom: 4rem;
}

.variables {
  padding-top: 1rem !important;
}

.group {
  color: #009933;
  background-color: #F5F5EF;
}

.eval {
  color: #FFA319;
  background-color: #F5F5EF; 
}

.comp {
  color: #1919FF;
  background-color: #F5F5EF; 
}

td {
  cursor: pointer; 
}

.init {
  font-style: italic;
}

.tops {
  margin-top: 10%;
}

.modal-content {
  width: 70%;
}

.bs-callout {
  margin: 20px 0;
  padding: 15px 30px 15px 15px;
  border-left: 5px solid #eee;
}

.bs-callout h4 {
  margin-top: 0;
}

.bs-callout p:last-child {
  margin-bottom: 0;
}

.bs-callout code,
.bs-callout .highlight {
  background-color: #fff;
}
 
/* Thremes for different contexts */
.bs-callout-danger {
  background-color: #fcf2f2;
  border-color: #dFb5b4;
}

.bs-callout-warning {
  background-color: #fefbed;
  border-color: #f1e7bc;
}

.bs-callout-info {
  background-color: #f0f7fd;
  border-color: #d0e3f0;
}

.bs-callout-danger h4 {
  color: #B94A48;
}

.bs-callout-info h4 {
  color: #3A87AD;
}

.green {
  color: #009933 !important; 
}

.nav-justified li > a.btn-warning {
  background-color: #f0ad4e !important;
}

.img {
  right: 0;
  position: fixed;
  margin-right: 2rem;
}

body .modal-dialog {
  width: 650px;
}

.spinner {
  top:0;
  left:0;
  width:100%;
  height:100%;
  opacity: .9;
  z-index:1000;
  position:absolute;
  background-color:transparent; 
}

.spinner * {
  top: 45%;
  left: 35%;
  display: block;    
  margin-top: -20px;
  margin-left: -45px;
  position: absolute;
}

.selected {
  font-weight: bold;
}

.lbl {
  margin-top: .5rem;
}

div {
  word-wrap: break-word;  
}
 
.invalid {
  border: solid !important;
  border-width: 1px !important;
  border-color: #FF4719 !important; 
}

.glyphicon {
  top: 0;
  width: 1% !important;
}

.input-group {
  margin-bottom: .5rem;
}

.inner-scrollbar-wrapper {
  width: 98%;
  overflow-y: auto;
  padding-bottom: 1px;
}

.inner-scrollbar {
  width: 98%;
}

.footer-container {
  height: 50px;
}

.alert-success {
  overflow-y: auto;
  max-height: 150px;
}

.sort {
  border-color: #357EBD !important;
  background-color: #F5F5EF !important;
}

.data-scrollbar {
	overflow-y: auto;
	height: auto;
	max-height: 500px;
}

td.group, td.ui-draggable {
  text-align: left;
}

.center-justify {
  text-align: center;
}

.btn {
  padding: 6px 8px;
}
.drag-container {
  padding: 0 0 0 0 !important;
}
.form-group {
  margin-bottom: 5px;
}
.opt {
  float: right;
  margin-top: -3.2rem;
}
.parent-target {
  width: 98% !important;
}
#ruleName {
 width: 98% !important; 
}
.sortable {
  padding: 5rem !important;
}
.delete {
  margin-top: -1rem;
}

